root_extra_deps = [ "//chromiumcontent:chromiumcontent" ]
is_electron_build = true
is_component_build = false
is_debug = false
symbol_level = 2
enable_nacl = false
enable_widevine = true
proprietary_codecs = true
is_component_ffmpeg = true
ffmpeg_branding = "Chrome"

# Always use the system provided standard library
use_custom_libcxx = false

# This is required by Node.js
# See https://github.com/nodejs/node/pull/13242
v8_promise_internal_field_count = 1

if (target_cpu == "arm64") {
  use_system_freetype = true
}

# On Windows, we cannot use allocator shim because even though this is
# a non-component build, we still use the dynamic CRT with which the shim
# does not work
if (target_os == "win") {
  use_allocator_shim = false
}
